--- a/Assignment.html
+++ b/Assignment.html
@@ -79,7 +79,7 @@
             </div>
         </section>
         
-
+<!-- Main-2 -->
         <section class="main-2">
             <div class="container-2">
                 <div class="wrap-2">
@@ -251,6 +251,54 @@
             </div>
             <button>See More  <i class="fa-solid fa-arrow-right"></i></button>
         </section>
+ <!-- Main-3 -->
+        <section class="main-3">
+            <div class="container">
+                <div class="Flex Join">
+                    <div class="im1">
+                        <img src="./images/gear.png" alt="">
+                    </div>
+                    <div class="im2">
+                        <h2>Featured products at one place</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                        do amet sint. Velit officia consequat duis enim velit mollit.
+                        Exercitation veniam consequat sunt nostrud amet.
+                        </p>
+                        <button>Join Now  <i class="fa-solid fa-arrow-right"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+ <!-- Main-4 -->
+        <section>
+            <div class="container-2">
+                <div class="search">
+                    <div class="bg">
+                        <h1>Get The Latest Deals</h1>
+                        <div class="tp">
+                            <input type="search" placeholder="Search Now">
+                            <button>SUBSCRIBE</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
      </main>
+
+     <!-- Footer -->
+      <footer>
+        <div class="footer">
+            <h3>Influencer products</h3>
+            <p class="p1">Copyright © 2020 influencer products</p>
+            <p class="p2">All rights reserved
+            </p>
+            <ul>
+                <li><i class="fa-brands fa-instagram"></i></li>
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-youtube"></i></li>
+            </ul>
+        </div>
+      </footer>
 </body>
 </html>
