--- a/Assignment.html
+++ b/Assignment.html
@@ -11,35 +11,39 @@
     <header>
         <!-- navbar -->
         <div class="container">
-            <nav class="Flex">
-                <div class="logo">
-                    <h4>Influencer products </h4>
+            <nav>
+                <div class="uppernav">
+                    <ul>
+                        <li><i class="fa-solid fa-user"></i></li>
+                        <li>Log In</li>
+                        <li>|</li>
+                        <li>Sign Up</li>
+                    </ul>
                 </div>
-                <ul class="Flex">
-                    <li>Home </li>
-                    <li>Products</li>
-                    <li>Sign up </li>
-                    <li>Log In</li>
-                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                    <li><i class="fa-solid fa-cart-shopping"></i></li>
-                </ul>
+                <div class="Flex lowernav">
+                    <div class="logo">
+                        <h4>DPI Stationery Shop </h4>
+                    </div>
+                    <div class="searchbar">
+                        <input type="search" placeholder="Search">
+                        <button id="SB"><span><i class="fa-solid fa-magnifying-glass"></i></span></button>
+                    </div>
+                    <ul class="Flex">
+                        <li>Home </li>
+                        <li>Products</li>
+                        <li>About Us </li>
+                        <li>Brands</li>
+                        <li>Stationery Shop</li>
+                        <li><i class="fa-solid fa-cart-shopping"></i></li>
+                    </ul>
+                </div>
             </nav>
         </div>
 <!-- Header bottom -->
         <div class="header-bottom">
             <div class="container">
                 <div class="wrap Flex">
-                    <div class="left-main">
-                        <h1>Start your Journey as 
-                            Influencer</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-                            <button>Preebook now  <i class="fa-solid fa-arrow-right"></i></button>
-                    </div>
-                    <div class="right-main">
-                        <div class="bg">
-                            <img src="./images/main-camera.png" alt="">
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
