--- a/Stationery-Shop.html
+++ b/Stationery-Shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>influencer-gears</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Style1x.css">
     <script src="https://kit.fontawesome.com/60754ea904.js" crossorigin="anonymous"></script>
 </head>
 <body>
