--- a/Stationery-Shop.html
+++ b/Stationery-Shop.html
@@ -43,7 +43,7 @@
         <div class="header-bottom">
             <div class="container">
                 <div class="wrap Flex">
-                    
+                    <h1>Your Favourite <br> Stationery Stor</h1>
                 </div>
             </div>
         </div>
